[package]
name = "lava-gitlab-runner"
version = "0.3.2"
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Gitlab runner bridge to lava"
homepage = "https://gitlab.collabora.com/lava/lava-gitlab-runner"
repository = "https://gitlab.collabora.com/lava/lava-gitlab-runner.git"

[dependencies]
bytes = "1.9.0"
chrono = { version = "0.4.20", features = ["serde"] }
colored = "3"
gitlab-runner = "0.2.0"
lava-api = "0.1.2"
lazy_static = "1.5"
structopt = "0.3.23"
url = "2.2.2"
tokio = "1.35"
async-trait = "0.1.51"
futures = "0.3.17"
handlebars = "6"
masker = { version="0.0.4", features=["streams"] }
junit-parser = "1"
serde = { version = "^1.0.194", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.9.30"
rand = "0.9.0"
tempfile = "3.16.0"
tokio-util = { version = "0.7", features = [ "io" ] }
tracing-subscriber = { version = "0.3.9", features = ["env-filter", "json"] }
tracing = "0.1.31"
strum = { version = "0.27.1", features = ["derive"] }

[build-dependencies]
vergen = { version = "8.3.1", features = ["git", "gitcl"] }
