[package]
name = "lava-gitlab-runner"
version = "0.3.2"
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
description = "Gitlab runner bridge to lava"
homepage = "https://gitlab.collabora.com/lava/lava-gitlab-runner"
repository = "https://gitlab.collabora.com/lava/lava-gitlab-runner.git"

[dependencies]
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
colored = "3"
gitlab-runner = "0.3.0"
lava-api = "0.2"
url = "2"
tokio = "1"
async-trait = "0.1"
futures = "0.3"
handlebars = "6"
masker = { version = "0.0.4", features = ["streams"] }
junit-parser = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_norway = "0.9"
rand = "0.10"
tempfile = "3"
tokio-util = { version = "0.7", features = ["io"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing = "0.1"
strum = { version = "0.28", features = ["derive"] }
clap = { version = "4", features = ["derive", "env"] }

[build-dependencies]
vergen-gix = "9"
